# music-keys

./: .gitattributes  .gitignore  ESSENTIA_TAURI_APP_OUTLINE.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: analysis.rs  commands.rs  main.rs  models.rs
test_samples/: README.md  manifest.csv
