[package]
name = "sample-key-studio"
version = "0.1.0"
description = "Native sample key, pitch, and BPM analysis app"
authors = ["Sample Key Studio"]
edition = "2021"

[[bin]]
name = "sample-key-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["aac", "alac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
thiserror = "2"
walkdir = "2"
